Alterações do site - matrícula: 904963

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Currículo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav>
+    <ul>
+        <li>
+            <a href="Mais sobre mim.html">Mais sobre mim</a>
+        </li>
+    </ul>
+</nav>
+
+<header>
+    <div class="center">
+ <img src="My photo.jpg">
+    </div>
+    <h1>Perciliana Rodrigues</h1>
+</header>
+
+<main>
+
+<section>
+    <p>
+        Endereço: Rua New York, 123 - Califónia <p>
+            Email: abcdf@gmail.com <p>
+                Telefone: (12) 3456 - 7890
+            </p>
+        </p>
+    </p>
+</section>
+
+    <section>
+        <h3>Habilidades</h3>
+        <p>
+            Proativa, Comunicativa e Organizada
+
+        </p>
+    </section>
+    <section>
+        <h3>Idiomas</h3>
+        <p>
+            Inglês Avançado <p>
+                Cursando Espanhol
+            </p>
+        </p>
+    </section>
+    <section>
+        <h3>Educação</h3>
+        <p>
+         Estudante de Engenharia de Software na Puc Minas
+        </p>
+    </section>
+    <section>
+        <h3>Objetivo Profissional</h3>
+        <p>
+            Com a certeza de ser capaz de exercer um bom trabalho nesta empresa, venho por meio deste solicitar
+uma oportunidade. <p>
+    Tenho a consciência de que um ótimo trabalho é aquele desenvolvido com ética e respeito.
+</p>
+    </section>
+</main>
 </body>
 </html>
